# address-cleanser

./: .coveragerc  .gitignore  API_README.md  BUILD_EXECUTABLE.md  CHANGELOG.md  CONTRIBUTING.md  EXTENSION_GUIDE.md  LICENSE  NEXT_STEPS.md  README.md  api_server.py  cli.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  ci.yml
homebrew/: README.md
homebrew/Formula/: address-cleanser.rb
hooks/: hook-mmap.py  pyi_rth_cmath.py  pyi_rth_mmap.py  pyi_rth_pandas_patch.py
packaging/: build.sh  distribute.sh  install.sh
packaging/brew/: address-cleanser.rb.tmpl
packaging/pkg/: distribution-user.xml
packaging/pkg/Scripts/: postinstall
scripts/: build_executable.py  build_local.sh  macos_distribution.py  test_macos_distribution.sh
src/: __init__.py  formatter.py  parser.py  utils.py  validator.py
src/api/: __init__.py  endpoints.py  main.py  middleware.py  models.py  service.py
test_data/: client1_separate_columns.csv  client2_combined_address.csv  client3_mixed_columns.csv  client4_simple_address.csv  client5_many_columns.csv  client6_messy_data.csv  client7_minimal_data.csv  client8_international_format.csv
tests/: README.md  __init__.py  conftest.py  test_api.py  test_cli.py  test_integration.py  test_parser.py  test_performance.py  test_validator.py
